sc: restore Empty and NonEmpty query filter after FILEOPEN

fix: tdf#73845

Signed-off-by: Chenxiong Qi <qcxhome@gmail.com>
Change-Id: I659e0d97c44bf189f457ca04eb49248121278c10